fixing card alignment issue

--- a/ABASim-SPA/src/app/admin/admin.component.css
+++ b/ABASim-SPA/src/app/admin/admin.component.css
@@ -3,3 +3,9 @@
     padding: 30px 0;
     position: relative;
 }
+
+.cards-row {
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+}
