--- a/ABASim-SPA/src/app/dashboard/dashboard.component.css
+++ b/ABASim-SPA/src/app/dashboard/dashboard.component.css
@@ -15,6 +15,8 @@
 
 .cards-row {
     padding: 5px;
+    display: flex;
+    justify-content: center;
 }
 
 td { 
