--- a/ABASim-SPA/src/app/freeagents/freeagents.component.css
+++ b/ABASim-SPA/src/app/freeagents/freeagents.component.css
@@ -12,3 +12,9 @@ table {
 .tablebutton {
     margin-left:5px;
 }
+
+.cards-row {
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+}
