--- a/ABASim-SPA/src/app/stats/stats.component.css
+++ b/ABASim-SPA/src/app/stats/stats.component.css
@@ -9,3 +9,9 @@
     padding: 30px 0;
     position: relative;
 }
+
+.cards-row {
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+}
