--- a/ABASim-SPA/src/app/transactions/transactions.component.css
+++ b/ABASim-SPA/src/app/transactions/transactions.component.css
@@ -20,3 +20,9 @@ table {
     padding: 30px 0;
     position: relative;
 }
+
+.cards-row {
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+}
